// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom sheet Snapshots tests should match snapshot 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div />
  <div
    alfa-portal-container=""
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        style="opacity: 1; transition: opacity 300ms ease-in-out; position: relative; z-index: 100;"
      >
        <div
          aria-hidden="true"
          class="backdrop appear appearActive"
        />
      </div>
      <div
        class="wrapper"
        role="dialog"
        style="z-index: 100;"
        tabindex="-1"
      >
        <div
          class="component modal appear appearActive"
        >
          <div
            class="content"
          >
            <div
              class="component withTransition"
            >
              <div
                class="marker"
              />
              <div
                class="scrollableContainer withPadding"
              >
                <h2
                  class="component title system-small bold primary"
                >
                  Bottom sheet title
                </h2>
                <div
                  class="content"
                >
                  <div>
                    Bottom sheet content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Bottom sheet Snapshots tests should match snapshot with action button 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    alfa-portal-container=""
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        style="opacity: 1; transition: opacity 300ms ease-in-out; position: relative; z-index: 100;"
      >
        <div
          aria-hidden="true"
          class="backdrop appear appearActive"
        />
      </div>
      <div
        class="wrapper"
        role="dialog"
        style="z-index: 100;"
        tabindex="-1"
      >
        <div
          class="component modal appear appearActive"
        >
          <div
            class="content"
          >
            <div
              class="component withTransition"
            >
              <div
                class="marker"
              />
              <div
                class="scrollableContainer"
              >
                <h2
                  class="component title system-small bold primary"
                >
                  Bottom sheet title
                </h2>
                <div
                  class="content"
                >
                  <div>
                    Bottom sheet content
                  </div>
                </div>
                <div
                  class="footer"
                >
                  <div />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <div />
</body>
`;
